--- a/Weatherhtml.html
+++ b/Weatherhtml.html
@@ -47,8 +47,11 @@
       <footer>
         <p>
           This project was coded by
-          <a href="https://github.com/" target="_blank">KayyLanga</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="https://github.com/kayylanga/WeatherAppTrial" target="_blank"
+            >KayyLanga</a
+          >
+          and is
+          <a href="https://github.com/" target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
