--- a/index.html
+++ b/index.html
@@ -98,71 +98,24 @@
               <div class="weather-forecast-temperature">22ºC</div>
             </div>
           </div>
-          <div class="weather-forecast-daily">
-            <div class="weather-forecast-day">
-              <div class="weather-forecast-date">Tue</div>
-              <div class="weather-forecast-icon">🌤️</div>
-              <div class="weather-forecast-temperatures">
-                <div class="weather-forecast-temperature">
-                  <strong>15º</strong> | 9º</div>
-              </div>
-            </div>
-            <div class="weather-forecast-day">
-              <div class="weather-forecast-date">Wedn</div>
-              <div class="weather-forecast-icon">🌤️</div>
-              <div class="weather-forecast-temperatures">
-                <div class="weather-forecast-temperature">
-                  <strong>15º</strong> | 9º</div>
-              </div>
-            </div>
-            <div class="weather-forecast-day">
-              <div class="weather-forecast-date">Thurs</div>
-              <div class="weather-forecast-icon">🌤️</div>
-              <div class="weather-forecast-temperatures">
-                <div class="weather-forecast-temperature">
-                  <strong>15º</strong> | 9º</div>
-              </div>
-            </div>
-            <div class="weather-forecast-day">
-              <div class="weather-forecast-date">Fri</div>
-              <div class="weather-forecast-icon">🌤️</div>
-              <div class="weather-forecast-temperatures">
-                <div class="weather-forecast-temperature">
-                  <strong>15º</strong> | 9º</div>
-              </div>
-            </div>
-            <div class="weather-forecast-day">
-              <div class="weather-forecast-date">Sat</div>
-              <div class="weather-forecast-icon">🌤️</div>
-              <div class="weather-forecast-temperatures">
-                <div class="weather-forecast-temperature">
-                  <strong>15º</strong> | 9º</div>
-              </div>
-            </div>
-            <div class="weather-forecast-day">
-              <div class="weather-forecast-date">Sun</div>
-              <div class="weather-forecast-icon">🌤️</div>
-              <div class="weather-forecast-temperatures">
-                <div class="weather-forecast-temperature">
-                  <strong>15º</strong> | 9º</div>
-              </div>
-            </div>
+          <div class="weather-forecast-daily" id="forecast-daily">
+            
           </div>
         </div>
-      </div>
-    </div>
-    <footer>
+      <footer>
         This project was coded by
-        <a href="https://github.com/matthieua/" target="_blank"> Matt Delac</a>,
+        <a href="https://github.com/kayylanga" target="_blank"> Kayy Langa</a>,
         is
-        <a href="https://github.com/matthieua/meteo" target="_blank"
+        <a href="https://github.com/kayylanga/Final-Weather-App-Project" target="_blank"
           >open-sourced on GitHub</a
         >
         and
-        <a href="https://meteo-shecodes-app.netlify.app/" target="_blank"
+        <a href="https://kayysweatherapp.netlify.app" target="_blank"
           >hosted on Netlify</a
         >
       </footer>
+    </div>
+    </div>
     <script src="SRC/Edit.js"></script>
   </body>
 </html>
